--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -19,6 +19,10 @@ dependencies:
   flutter_bloc: ^8.1.1
   equatable: ^2.0.5
   flutter_svg: ^1.1.5
+  firebase_core: ^1.22.0
+  go_router: ^5.0.1
+  firebase_auth: ^3.10.0
+  flow_builder: ^0.0.9
 
 dev_dependencies:
   flutter_test:
