--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,6 +23,13 @@ dependencies:
   go_router: ^5.0.1
   firebase_auth: ^3.10.0
   flow_builder: ^0.0.9
+  firebase_storage: ^10.3.10
+  firebase_analytics: ^9.3.7
+  cloud_firestore: ^3.5.0
+  image_picker: ^0.8.6
+  permission_handler: ^10.1.0
+  avatar_view: ^1.0.1
+  loading_overlay: ^0.3.0
 
 dev_dependencies:
   flutter_test:
