--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,6 +34,12 @@ dependencies:
   carousel_slider: ^4.1.1
   shimmer: ^2.0.0
   cached_network_image: ^3.2.2
+  flutter_launcher_icons: ^0.10.0
+
+flutter_icons:
+  android: true
+  ios: true
+  image_path: "assets/icon/icon.png"
 
 dev_dependencies:
   flutter_test:
@@ -50,6 +56,7 @@ flutter:
   assets:
     - assets/image/
     - assets/icon/
+    - assets/data/
 
   fonts:
     - family: SF Pro
