--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,9 @@ dependencies:
   shimmer: ^2.0.0
   cached_network_image: ^3.2.2
   flutter_launcher_icons: ^0.10.0
+  hydrated_bloc: ^8.1.0
+  path_provider: ^2.0.11
+  json_annotation: ^4.7.0
 
 flutter_icons:
   android: true
