--- a/ios/firebase_app_id_file.json
+++ b/ios/firebase_app_id_file.json
@@ -1,7 +1,7 @@
 {
   "file_generated_by": "FlutterFire CLI",
   "purpose": "FirebaseAppID & ProjectID for this Firebase app in this directory",
-  "GOOGLE_APP_ID": "1:749296617679:ios:f9b49c8e723741ab5c4fba",
-  "FIREBASE_PROJECT_ID": "fitnessapp-bf5e4",
-  "GCM_SENDER_ID": "749296617679"
+  "GOOGLE_APP_ID": "1:790265899945:ios:2c4c208ecf6fb070d8b2b8",
+  "FIREBASE_PROJECT_ID": "jfiit-44e3c",
+  "GCM_SENDER_ID": "790265899945"
 }
