--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,12 @@ dependencies:
   hydrated_bloc: ^8.1.0
   path_provider: ^2.0.11
   json_annotation: ^4.7.0
+  flutter_slidable: ^2.0.0
+  fluttertoast: ^8.1.1
+  flutter_chat_ui: ^1.6.5
+  file_picker: ^5.2.2
+  open_filex: ^4.2.2
+  mime: ^1.0.2
 
 flutter_icons:
   android: true
